fix: product content behind to header (#92)

--- a/src/components/MainMenu/scss/index.scss
+++ b/src/components/MainMenu/scss/index.scss
@@ -11,6 +11,7 @@
   padding: 12px 40px 12px 32px;
   position: relative;
   width: 1140px;
+  z-index: 1;
   // vertical-align: middle;
 
   @media (max-width: $medium-screen) {
