--- a/src/views/Product/scss/index.scss
+++ b/src/views/Product/scss/index.scss
@@ -2,7 +2,7 @@
 
 .product-page {
   background-color: $white;
-
+  z-index: 0;
   .breadcrumbs {
     background-color: $white;
     padding: $spacer / 2 $spacer $spacer / 2 $spacer * 1.5;
